# projeto-ciclo1

./: .gitignore  EXAMPLE.env  Home.py  Home.py.py  LICENSE  README.md  config.yaml  main_page.py  pyproject.toml
imgs/: test1.jfif  test2.jfif
pages/: 1Perfil.py  2Documentos.py  3Cadastro.py
projeto_ciclo1/: __init__.py  app.py  database.py  database.sql
projeto_ciclo1/controllers/: documents_controllers.py  log_funcions.py  logs_controllers.py  system_log_controllers.py  user_controllers.py  utils.py
projeto_ciclo1/database/: database.py
projeto_ciclo1/login/: fetch_users.py  login.py
projeto_ciclo1/ocr/: ocr.py  ocr_functions.py
projeto_ciclo1/pages_library/: attach.py  doc_attach.py  doc_delete.py  doc_models.py  doc_page.py  fetch_users.py  home.py  log_user_history.py  login.py  login_functions.py  main.py  model_config.py  model_page.py  profile_page.py  register_user_page.py  search_doc.py  signup_page.py  sparrow.py  sparrow_attach.py  sparrow_models.py  sparrow_scan.py  test_pdf.py  utils.py
projeto_ciclo1/update_user/: update_email.py  update_password.py
rade/: app.py
rade/controllers/: logs_controllers.py  user_controllers.py
rade/database/: database.py
rade/pages_library/: doc_attach.py  doc_models.py  doc_page.py  home.py  log_user_history.py  profile_page.py  search_doc.py  sparrow.py
