[tool.poetry]
name = "projeto-ciclo1"
version = "0.1.0"
description = ""
authors = ["João Marques <joaofmarques.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "4.1.2"
streamlit = "^1.29.0"
pandas = "2.2.1"
streamlit-authenticator = "0.3.2"
streamlit-option-menu = "^0.3.12"
sqlalchemy-orm = "^1.2.10"
pip = "^24.0"
install = "^1.3.5"
python-dotenv = "^1.0.1"
pdf2image = "^1.17.0"
streamlit-javascript = "^0.1.5"
streamlit-sparrow-labeling = "^0.1.1"
opencv-python = "^4.9.0.80"
pytesseract = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

